--- a/Case 09 - Impact of Severe Weather/Impact of Severe Weather.Rmd
+++ b/Case 09 - Impact of Severe Weather/Impact of Severe Weather.Rmd
@@ -1,24 +1,21 @@
-
-## Impact of Severe Weather Events on Public Health and Economy in the United States
+---
+title: '**Impact of Severe Weather Events on Public Health and Economy in the United States**'
+author: "Xiang Wang in Summer 2015"
+output: html_document
+---
 
 ### Abstract  
 Storms and other severe weather events can cause both public health and economic problems for communities and municipalities. Many severe events can result in fatalities, injuries, and property damage, and preventing such outcomes to the extent possible is a key concern. In this report, the impact of different weather events on public health and economy was analyzed from the storm database collected from the U.S. National Oceanic and Atmospheric Administration's (NOAA) from 1950 - 2011. The statistics of fatalities, injuries, property and crop damage were used to analyze which types of event were most harmful to the population health and economy. It was found that excessive heat and tornado were most harmful to population health while flood, drought, and hurricane/typhoon had the greatest economic consequences.
 
-The basic goal of this assignment is to explore the NOAA Storm Database and answer some basic questions about severe weather events. You must use the database to answer the questions below and show the code for your entire analysis. Your analysis can consist of tables, figures, or other summaries. You may use any R package you want to support your analysis.
+* The basic `goal` of this project is to explore the `NOAA Storm Database` and answer some basic questions about severe weather events.
 
-#### Questions
-
+### Questions
 Your data analysis must address the following questions:
 1. Across the United States, which types of events (as indicated in the `EVTYPE` variable) are most harmful with respect to population health?
 2. Across the United States, which types of events have the greatest economic consequences?
 
-### Basic settings
-```{r}
-echo = TRUE
-```
-
 ### Data Processing
-```{r, results="hide"}
+```{r, warning=FALSE}
 library(R.utils)
 library(ggplot2)
 library(plyr)
@@ -27,23 +24,21 @@ require(gridExtra)
 # read a zip data file without unzipping it
 storm <- read.csv("StormData.csv.bz2", header=T, sep=',') 
 str(storm)
-names(storm)
 ```
 
 The events in the database start in 1950 and end in 2011. There are generally fewer events recorded in the early years of the database. So here data from recent years should be more complete.
-
 ```{r}
 storm$year <- as.numeric(format(as.Date(storm$BGN_DATE, format = "%m/%d/%Y %H:%M:%S"), "%Y"))
 hist(storm$year, breaks = 50, main = "Histogram of weather events by year", xlab = "Year")
 ```  
-
 Based on the histogram above, the number of events starts to significantly increase since 1980. Thus, the subset of the data from 1980 to 2011 to get most out of good records.
+
 ```{r}
 storm <- storm[storm$year >= 1980, ]
-dim(storm)
+# dim(storm) # 826931, 38
 ```
 
-#### Impact on Public Health
+### Impact on Public Health
 The numbers of fatalities and injuries caused by severe weather events were checked to get the ten most frequent types of events.
 ```{r}
 rank <- function(variable, top = 10, dataset = storm) {
@@ -60,9 +55,8 @@ fatalities <- rank("FATALITIES", dataset = storm)
 injuries <- rank("INJURIES", dataset = storm)
 ```
 
-#### Impact on Economy
+### Impact on Economy
 We will convert the damage data from property and crop into comparable numerical forms according to the meaning of units described in the code book ([Storm Events](http://ire.org/nicar/database-library/databases/storm-events/)). Both `PROPDMGEXP` and `CROPDMGEXP` columns record a multiplier for each observation where we have Hundred (H), Thousand (K), Million (M) and Billion (B).
-
 ```{r}
 economy <- function(dataset = storm, b, c) {
   total <- dim(dataset)[2]
